--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## Goal",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.1",
+    "faker": "^4.1.0",
     "nunjucks": "^3.0.1",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
